--- a/css/topbar.css
+++ b/css/topbar.css
@@ -1,4 +1,36 @@
 @charset "UTF-8";
+/*----------------------------------------------------- */
+/* setting scss*/
+/*----------------------------------------------------- */
+/* 开关设置*/
+/*----------------------------------------------------- */
+/*是否兼容ie6-7*/
+/*是否为ie6-8开启css3滤镜兼容，常用于渐变背景 */
+/*是否开启打印样式*/
+/* color start */
+/* color end */
+/* clearfix*/
+/* 闭合子元素的浮动*/
+.topbar03 .iconfont {
+  position: relative; }
+
+/*----------------------------------------------------- */
+/* setting scss*/
+/*----------------------------------------------------- */
+/* 开关设置*/
+/*----------------------------------------------------- */
+/*是否兼容ie6-7*/
+/*是否为ie6-8开启css3滤镜兼容，常用于渐变背景 */
+/*是否开启打印样式*/
+/* color start */
+/* color end */
+/* clearfix*/
+/* 闭合子元素的浮动*/
+.topbar03 .iconfont {
+  position: relative; }
+
+/* input set  start  */
+/* input set  end  */
 /*innerBanner01 start*/
 .innerBanner01 {
   width: 100%;
@@ -17,46 +49,90 @@
     display: block; }
 
 /*innerBanner01 end*/
-/*g-topbar01 start*/
-.g-topbar {
+/* topbar03 start */
+.topbar03 {
   height: 34px;
   line-height: 34px;
   font-size: 12px;
-  background-color: #f3f3f3;
-  text-align: left; }
+  background-color: #f5f5f5;
+  text-align: left;
+  padding: 6px 0; }
+  .topbar03 .tl_wrapper {
+    margin-left: 20px; }
+  .topbar03 td {
+    vertical-align: middle; }
+  .topbar03 .topbar_link {
+    position: relative;
+    padding: 0 10px;
+    color: #2675d5; }
+    .topbar03 .topbar_link span {
+      height: 15px;
+      line-height: 15px; }
+      .topbar03 .topbar_link span img {
+        vertical-align: middle;
+        height: 15px;
+        margin-left: 5px; }
+    .topbar03 .topbar_link + .topbar_link:before {
+      position: absolute;
+      content: "|";
+      left: 0px;
+      width: 1px;
+      color: inherit; }
+    .topbar03 .topbar_link + .topbar_link:before {
+      left: -4px; }
+    .topbar03 .topbar_link:last-child {
+      padding-right: 0; }
+  .topbar03 span {
+    display: inline-block; }
+    .topbar03 span + span {
+      margin-left: 15px; }
+  .topbar03 .iconfont {
+    top: 2px; }
 
-.g-topbar span.title-g {
-  margin-left: 0; }
+.topbar03 span.title-g {
+  margin-left: 0px; }
 
-.g-topbar span, .g-topbar a {
-  display: inline-block;
-  margin-left: 15px; }
-
-/*g-topbar01 end*/
-/*g-topbar start*/
-.g-topbar02 {
+/* topbar03 end */
+/*topbar02 start*/
+.topbar02 {
   padding: 5px 0;
   background-color: #f5f4f4; }
 
-.g-topbar02 .topbar_link {
+.topbar02 .topbar_link {
   position: relative;
   padding: 0 10px;
   float: left; }
 
-.g-topbar02 .topbar_link + .topbar_link:before {
+.topbar02 .topbar_link + .topbar_link:before {
   position: absolute;
   content: "|";
   left: -1px;
   width: 1px;
   color: #dbdbdb; }
 
-.g-topbar02 .topbar_link:last-child {
+.topbar02 .topbar_link:last-child {
   padding-right: 0; }
 
 .language_selected {
   color: #df0000; }
 
-/*g-topbar end*/
+/*topbar end*/
+/*topbar01 start*/
+.topbar01 {
+  height: 34px;
+  line-height: 34px;
+  font-size: 12px;
+  background-color: #f3f3f3;
+  text-align: left; }
+
+.topbar01 span.title-g {
+  margin-left: 0; }
+
+.topbar01 span, .topbar01 a {
+  display: inline-block;
+  margin-left: 15px; }
+
+/*topbar01 end*/
 /*导航栏navbar-line03 start*/
 .navbar_wrapper {
   padding: 3px 0 0; }
@@ -180,7 +256,7 @@
   z-index: 99;
   top: 48px;
   padding-top: 10px;
-  background: url(/img/topTri.png) no-repeat 50% 5px;
+  background: url(../img/topTri.png) no-repeat 50% 5px;
   left: -6%; }
 
 .navbar-line02 .navbar-block .naver_0 .nav_erc {
@@ -295,10 +371,10 @@
 /*导航栏navbar-line01 end*/
 /*wave-banner start*/
 .wave.plain {
-  background-image: url(/img/wave-plain.png); }
+  background-image: url(../img/wave-plain.png); }
 
 .wave.paint {
-  background-image: url(/img/wave-paint.png); }
+  background-image: url(../img/wave-paint.png); }
 
 .waveContainer {
   position: relative;
@@ -401,7 +477,7 @@
   transform-origin: 50% 90%;
   -webkit-animation: lighthouse 4s 0.1s infinite alternate cubic-bezier(0.455, 0.03, 0.515, 0.955);
   animation: lighthouse 4s 0.1s infinite alternate cubic-bezier(0.455, 0.03, 0.515, 0.955);
-  background-image: url(/img/lighthouse.png);
+  background-image: url(../img/lighthouse.png);
   background-repeat: no-repeat;
   position: absolute;
   right: 20%;
@@ -469,7 +545,7 @@
 .header03 .more {
   color: #333;
   padding-left: 20px;
-  background: url(/img/iconHome.png) no-repeat 0 50%; }
+  background: url(../img/iconHome.png) no-repeat 0 50%; }
 
 /*header03 end*/
 /*header02 start*/
