--- a/sass/web/frame.scss
+++ b/sass/web/frame.scss
@@ -71,7 +71,7 @@
 .block-2{width:50%;}
 .block-3{width:33.3333333333%;}
 .block-4{width:25%;}
-.box{padding:10px;/*text-align: center;*/position: relative;}
+.box{padding:10px 0;/*text-align: center;*/position: relative;}
 
 .container-auto:before,.container-auto:after,
 .container1200:before,.container1200:after,
